[gd_scene load_steps=15 format=4 uid="uid://df5qcd5h22vlx"]

[ext_resource type="Script" uid="uid://b3tcs7tquokl4" path="res://Game/game.gd" id="1_qc7st"]
[ext_resource type="Texture2D" uid="uid://cpl1txig6ag5h" path="res://Assets/Art/TempTiles.png" id="2_3e1m6"]
[ext_resource type="Texture2D" uid="uid://bjj5twfea0w0y" path="res://Assets/Art/DontStopTile.png" id="3_jxerj"]
[ext_resource type="PackedScene" uid="uid://5p6mhnamiyne" path="res://Player/Player.tscn" id="3_l3v54"]
[ext_resource type="PackedScene" uid="uid://1hlj0572m4u4" path="res://UI/Pause/Pause.tscn" id="4_3e1m6"]
[ext_resource type="PackedScene" uid="uid://11c08ifh4tia" path="res://UI/HUD/HUD.tscn" id="5_ghvq8"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_c5u67"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_68let"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c5u67"]
texture = ExtResource("2_3e1m6")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
2:0/0 = 0
2:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
3:0/0 = 0
3:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_68let")
0:1/0 = 0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
1:1/0 = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
2:1/0 = 0
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
3:1/0 = 0
3:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
0:2/0 = 0
0:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
1:2/0 = 0
1:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
2:2/0 = 0
2:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
3:2/0 = 0
3:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
0:3/0 = 0
0:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
1:3/0 = 0
1:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
2:3/0 = 0
2:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")
3:3/0 = 0
3:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_c5u67")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_68let"]
texture = ExtResource("2_3e1m6")
0:0/0 = 0
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ghvq8"]
vertices = PackedVector2Array(4, -4, 8, -4, 8, 4, 4, 4, 4, 8, -4, 8, -4, 4, -4, -4, -8, 4, -8, -4, 4, -8, -4, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(3, 4, 5, 6), PackedInt32Array(0, 3, 6, 7), PackedInt32Array(6, 8, 9, 7), PackedInt32Array(10, 0, 7, 11)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-4, -8, 4, -8, 4, -4, 8, -4, 8, 4, 4, 4, 4, 8, -4, 8, -4, 4, -8, 4, -8, -4, -4, -4)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_fuqhk"]
vertices = PackedVector2Array(4, -4, 8, -4, 8, 4, 4, 4, 4, 8, -4, 8, -4, 4, -4, -4, -8, 4, -8, -4, 4, -8, -4, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(3, 4, 5, 6), PackedInt32Array(0, 3, 6, 7), PackedInt32Array(6, 8, 9, 7), PackedInt32Array(10, 0, 7, 11)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-4, -8, 4, -8, 4, -4, 8, -4, 8, 4, 4, 4, 4, 8, -4, 8, -4, 4, -8, 4, -8, -4, -4, -4)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oscxy"]
texture = ExtResource("3_jxerj")
0:0/0 = 0
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(8, -4, 0, -4, 0, 4, 8, 4)
1:0/0 = 0
1:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-4, -8, -4, 8, 4, 8, 4, -8)
2:0/0 = 0
2:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(4, 8, 4, 0, -4, 0, -4, 8)
3:0/0 = 0
3:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_fuqhk")
0:1/0 = 0
0:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -4, -8, 4, 8, 4, 8, -4)
1:1/0 = 0
1:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-4, -8, -4, -4, -8, -4, -8, 4, -4, 4, -4, 8, 4, 8, 4, 4, 8, 4, 8, -4, 4, -4, 4, -8)
2:1/0 = 0
2:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -4, -8, 4, 8, 4, 8, -4)
3:1/0 = 0
3:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, 4, 0, 4, 0, -4, -8, -4)
0:2/0 = 0
0:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-4, -4, -4, 4, 4, 4, 4, -4)
1:2/0 = 0
1:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(4, -8, -4, -8, -4, 8, 4, 8)
2:2/0 = 0
2:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-4, 8, -4, -4, 8, -4, 8, 4, 4, 4, 4, 8)
3:2/0 = 0
3:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -4, 4, -4, 4, 8, -4, 8, -4, 4, -8, 4)
0:3/0 = 0
0:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_ghvq8")
1:3/0 = 0
1:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-4, -8, -4, 0, 4, 0, 4, -8)
2:3/0 = 0
2:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(8, 4, -4, 4, -4, -8, 4, -8, 4, -4, 8, -4)
3:3/0 = 0
3:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(4, -8, 4, 4, -8, 4, -8, -4, -4, -4, -4, -8)

[sub_resource type="TileSet" id="TileSet_68let"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 8
physics_layer_1/collision_mask = 0
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_c5u67")
sources/1 = SubResource("TileSetAtlasSource_68let")
sources/3 = SubResource("TileSetAtlasSource_oscxy")

[node name="Game" type="Node2D"]
texture_filter = 1
script = ExtResource("1_qc7st")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD2//b/AAAAAAAAAAD2//f/AAAAAAAAAAD2//j/AAAAAAAAAAD2//n/AAAAAAAAAAD2//r/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD3//b/AAAAAAAAAAD4//b/AAAAAAAAAAD5//b/AAAAAAAAAAD6//b/AAAAAAAAAAD7//b/AAAAAAAAAAD8//b/AAAAAAAAAAD9//b/AAAAAAAAAAD+//b/AAAAAAAAAAD///b/AAAAAAAAAAAAAPb/AAAAAAAAAAABAPb/AAAAAAAAAAACAPb/AAAAAAAAAAADAPb/AAAAAAAAAAAEAPb/AAAAAAAAAAAFAPb/AAAAAAAAAAAGAPb/AAAAAAAAAAAHAPb/AAAAAAAAAAAIAPb/AAAAAAAAAAAJAPb/AAAAAAAAAAAJAPf/AAAAAAAAAAAJAPj/AAAAAAAAAAAJAPn/AAAAAAAAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAAAAkAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAD2/wAAAAAAAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wUAAAAAAAAAAAD2/wYAAAAAAAAAAAD2/wcAAAAAAAAAAAD2/wgAAAAAAAAAAAD2/wkAAAAAAAAAAAD3/wkAAAAAAAAAAAD4/wkAAAAAAAAAAAD5/wkAAAAAAAAAAAD6/wkAAAAAAAAAAAD7/wkAAAAAAAAAAAD8/wkAAAAAAAAAAAD9/wkAAAAAAAAAAAD+/wkAAAAAAAAAAAD//wkAAAAAAAAAAADy//T/AAAAAAAAAADy//X/AAAAAAAAAADy//b/AAAAAAAAAADy//f/AAAAAAAAAADy//j/AAAAAAAAAADy//n/AAAAAAAAAADy//r/AAAAAAAAAADy//v/AAAAAAAAAADy//z/AAAAAAAAAADy//3/AAAAAAAAAADy//7/AAAAAAAAAADy////AAAAAAAAAADy/wAAAAAAAAAAAADy/wEAAAAAAAAAAADy/wIAAAAAAAAAAADy/wMAAAAAAAAAAADy/wQAAAAAAAAAAADy/wUAAAAAAAAAAADy/wYAAAAAAAAAAADy/wcAAAAAAAAAAADy/wgAAAAAAAAAAADy/wkAAAAAAAAAAADy/woAAAAAAAAAAADy/wsAAAAAAAAAAADz//T/AAAAAAAAAADz//X/AAAAAAAAAADz//b/AAAAAAAAAADz//f/AAAAAAAAAADz//j/AAAAAAAAAADz//n/AAAAAAAAAADz//r/AAAAAAAAAADz//v/AAAAAAAAAADz//z/AAAAAAAAAADz//3/AAAAAAAAAADz//7/AAAAAAAAAADz////AAAAAAAAAADz/wAAAAAAAAAAAADz/wEAAAAAAAAAAADz/wIAAAAAAAAAAADz/wMAAAAAAAAAAADz/wQAAAAAAAAAAADz/wUAAAAAAAAAAADz/wYAAAAAAAAAAADz/wcAAAAAAAAAAADz/wgAAAAAAAAAAADz/wkAAAAAAAAAAADz/woAAAAAAAAAAADz/wsAAAAAAAAAAAD0//T/AAAAAAAAAAD0//X/AAAAAAAAAAD0//b/AAAAAAAAAAD0//f/AAAAAAAAAAD0//j/AAAAAAAAAAD0//n/AAAAAAAAAAD0//r/AAAAAAAAAAD0//v/AAAAAAAAAAD0//z/AAAAAAAAAAD0//3/AAAAAAAAAAD0//7/AAAAAAAAAAD0////AAAAAAAAAAD0/wAAAAAAAAAAAAD0/wEAAAAAAAAAAAD0/wIAAAAAAAAAAAD0/wMAAAAAAAAAAAD0/wQAAAAAAAAAAAD0/wUAAAAAAAAAAAD0/wYAAAAAAAAAAAD0/wcAAAAAAAAAAAD0/wgAAAAAAAAAAAD0/wkAAAAAAAAAAAD0/woAAAAAAAAAAAD0/wsAAAAAAAAAAAD1//T/AAAAAAAAAAD1//X/AAAAAAAAAAD1//b/AAAAAAAAAAD1//f/AAAAAAAAAAD1//j/AAAAAAAAAAD1//n/AAAAAAAAAAD1//r/AAAAAAAAAAD1//v/AAAAAAAAAAD1//z/AAAAAAAAAAD1//3/AAAAAAAAAAD1//7/AAAAAAAAAAD1////AAAAAAAAAAD1/wAAAAAAAAAAAAD1/wEAAAAAAAAAAAD1/wIAAAAAAAAAAAD1/wMAAAAAAAAAAAD1/wQAAAAAAAAAAAD1/wUAAAAAAAAAAAD1/wYAAAAAAAAAAAD1/wcAAAAAAAAAAAD1/wgAAAAAAAAAAAD1/wkAAAAAAAAAAAD1/woAAAAAAAAAAAD1/wsAAAAAAAAAAADy/wwAAAAAAAAAAADy/w0AAAAAAAAAAADz/wwAAAAAAAAAAADz/w0AAAAAAAAAAAD0/wwAAAAAAAAAAAD0/w0AAAAAAAAAAAD1/wwAAAAAAAAAAAD1/w0AAAAAAAAAAAD2/woAAAAAAAAAAAD2/wsAAAAAAAAAAAD2/wwAAAAAAAAAAAD2/w0AAAAAAAAAAAD3/woAAAAAAAAAAAD3/wsAAAAAAAAAAAD3/wwAAAAAAAAAAAD3/w0AAAAAAAAAAAD4/woAAAAAAAAAAAD4/wsAAAAAAAAAAAD4/wwAAAAAAAAAAAD4/w0AAAAAAAAAAAD5/woAAAAAAAAAAAD5/wsAAAAAAAAAAAD5/wwAAAAAAAAAAAD5/w0AAAAAAAAAAAD6/woAAAAAAAAAAAD6/wsAAAAAAAAAAAD6/wwAAAAAAAAAAAD6/w0AAAAAAAAAAAD7/woAAAAAAAAAAAD7/wsAAAAAAAAAAAD7/wwAAAAAAAAAAAD7/w0AAAAAAAAAAAD8/woAAAAAAAAAAAD8/wsAAAAAAAAAAAD8/wwAAAAAAAAAAAD8/w0AAAAAAAAAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAAAAAD9/wwAAAAAAAAAAAD9/w0AAAAAAAAAAAD+/woAAAAAAAAAAAD+/wsAAAAAAAAAAAD+/wwAAAAAAAAAAAD+/w0AAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAD//w0AAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAEAA0AAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAHAA0AAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA0AAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAALAA0AAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAAMAA0AAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAANAA0AAAAAAAAAAAAKAPL/AAAAAAAAAAAKAPP/AAAAAAAAAAAKAPT/AAAAAAAAAAAKAPX/AAAAAAAAAAAKAPb/AAAAAAAAAAAKAPf/AAAAAAAAAAAKAPj/AAAAAAAAAAAKAPn/AAAAAAAAAAAKAPr/AAAAAAAAAAAKAPv/AAAAAAAAAAAKAPz/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAALAPL/AAAAAAAAAAALAPP/AAAAAAAAAAALAPT/AAAAAAAAAAALAPX/AAAAAAAAAAALAPb/AAAAAAAAAAALAPf/AAAAAAAAAAALAPj/AAAAAAAAAAALAPn/AAAAAAAAAAALAPr/AAAAAAAAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAALAP3/AAAAAAAAAAALAP7/AAAAAAAAAAALAP//AAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAAMAPL/AAAAAAAAAAAMAPP/AAAAAAAAAAAMAPT/AAAAAAAAAAAMAPX/AAAAAAAAAAAMAPb/AAAAAAAAAAAMAPf/AAAAAAAAAAAMAPj/AAAAAAAAAAAMAPn/AAAAAAAAAAAMAPr/AAAAAAAAAAAMAPv/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP//AAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAANAPL/AAAAAAAAAAANAPP/AAAAAAAAAAANAPT/AAAAAAAAAAANAPX/AAAAAAAAAAANAPb/AAAAAAAAAAANAPf/AAAAAAAAAAANAPj/AAAAAAAAAAANAPn/AAAAAAAAAAANAPr/AAAAAAAAAAANAPv/AAAAAAAAAAANAPz/AAAAAAAAAAANAP3/AAAAAAAAAAANAP7/AAAAAAAAAAANAP//AAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAADy//L/AAAAAAAAAADy//P/AAAAAAAAAADz//L/AAAAAAAAAADz//P/AAAAAAAAAAD0//L/AAAAAAAAAAD0//P/AAAAAAAAAAD1//L/AAAAAAAAAAD1//P/AAAAAAAAAAD2//L/AAAAAAAAAAD2//P/AAAAAAAAAAD2//T/AAAAAAAAAAD2//X/AAAAAAAAAAD3//L/AAAAAAAAAAD3//P/AAAAAAAAAAD3//T/AAAAAAAAAAD3//X/AAAAAAAAAAD4//L/AAAAAAAAAAD4//P/AAAAAAAAAAD4//T/AAAAAAAAAAD4//X/AAAAAAAAAAD5//L/AAAAAAAAAAD5//P/AAAAAAAAAAD5//T/AAAAAAAAAAD5//X/AAAAAAAAAAD6//L/AAAAAAAAAAD6//P/AAAAAAAAAAD6//T/AAAAAAAAAAD6//X/AAAAAAAAAAD7//L/AAAAAAAAAAD7//P/AAAAAAAAAAD7//T/AAAAAAAAAAD7//X/AAAAAAAAAAD8//L/AAAAAAAAAAD8//P/AAAAAAAAAAD8//T/AAAAAAAAAAD8//X/AAAAAAAAAAD9//L/AAAAAAAAAAD9//P/AAAAAAAAAAD9//T/AAAAAAAAAAD9//X/AAAAAAAAAAD+//L/AAAAAAAAAAD+//P/AAAAAAAAAAD+//T/AAAAAAAAAAD+//X/AAAAAAAAAAD///L/AAAAAAAAAAD///P/AAAAAAAAAAD///T/AAAAAAAAAAD///X/AAAAAAAAAAAAAPL/AAAAAAAAAAAAAPP/AAAAAAAAAAAAAPT/AAAAAAAAAAAAAPX/AAAAAAAAAAABAPL/AAAAAAAAAAABAPP/AAAAAAAAAAABAPT/AAAAAAAAAAABAPX/AAAAAAAAAAACAPL/AAAAAAAAAAACAPP/AAAAAAAAAAACAPT/AAAAAAAAAAACAPX/AAAAAAAAAAADAPL/AAAAAAAAAAADAPP/AAAAAAAAAAADAPT/AAAAAAAAAAADAPX/AAAAAAAAAAAEAPL/AAAAAAAAAAAEAPP/AAAAAAAAAAAEAPT/AAAAAAAAAAAEAPX/AAAAAAAAAAAFAPL/AAAAAAAAAAAFAPP/AAAAAAAAAAAFAPT/AAAAAAAAAAAFAPX/AAAAAAAAAAAGAPL/AAAAAAAAAAAGAPP/AAAAAAAAAAAGAPT/AAAAAAAAAAAGAPX/AAAAAAAAAAAHAPL/AAAAAAAAAAAHAPP/AAAAAAAAAAAHAPT/AAAAAAAAAAAHAPX/AAAAAAAAAAAIAPL/AAAAAAAAAAAIAPP/AAAAAAAAAAAIAPT/AAAAAAAAAAAIAPX/AAAAAAAAAAAJAPL/AAAAAAAAAAAJAPP/AAAAAAAAAAAJAPT/AAAAAAAAAAAJAPX/AAAAAAAAAAD3//7/AwADAAEAAAD3/wEAAwADAAEAAAD3/wgAAwADAAIAAAD4//r/AwAAAAAAAAD4/wUAAwAAAAAAAAD5//r/AwACAAEAAAD5//7/AwAAAAAAAAD5/wEAAwAAAAAAAAD5/wUAAwAAAAEAAAD6//j/AwACAAAAAAD6//n/AwABAAAAAAD6//r/AwABAAEAAAD6//v/AwABAAAAAAD6//z/AwABAAMAAAD6//7/AwADAAIAAAD6////AwABAAAAAAD6/wAAAwABAAAAAAD6/wEAAwADAAMAAAD6/wMAAwACAAAAAAD6/wQAAwABAAIAAAD6/wUAAwABAAEAAAD6/wYAAwABAAIAAAD6/wcAAwABAAMAAAD7//r/AwACAAEAAAD7/wUAAwAAAAEAAAD8//r/AwADAAEAAAD8//3/AwAAAAAAAAD8/wIAAwAAAAAAAAD8/wUAAwADAAEAAAD9//z/AwACAAAAAAD9//3/AwABAAEAAAD9//7/AwABAAMAAAD9/wAAAwACAAAAAAD9/wEAAwABAAAAAAD9/wIAAwABAAEAAAD9/wMAAwABAAMAAAD+//f/AwABAAMAAAD+//n/AwACAAAAAAD+//r/AwACAAMAAAD+//3/AwACAAEAAAD+/wIAAwADAAEAAAD+/wUAAwACAAIAAAD+/wYAAwABAAMAAAD+/wgAAwACAAAAAAD///r/AwACAAEAAAD///3/AwADAAEAAAD//wUAAwACAAEAAAAAAPr/AwACAAEAAAAAAAIAAwAAAAAAAAAAAAUAAwACAAEAAAABAPf/AwABAAMAAAABAPn/AwACAAAAAAABAPr/AwADAAMAAAABAP3/AwAAAAAAAAABAAIAAwACAAEAAAABAAUAAwADAAIAAAABAAYAAwABAAMAAAABAAgAAwACAAAAAAACAPz/AwACAAAAAAACAP3/AwABAAEAAAACAP7/AwABAAAAAAACAP//AwABAAMAAAACAAEAAwACAAAAAAACAAIAAwABAAEAAAACAAMAAwABAAMAAAADAPr/AwAAAAAAAAADAP3/AwADAAEAAAADAAIAAwADAAEAAAADAAUAAwAAAAAAAAAEAPr/AwACAAEAAAAEAAUAAwACAAEAAAAFAPj/AwACAAAAAAAFAPn/AwABAAAAAAAFAPr/AwABAAEAAAAFAPv/AwABAAAAAAAFAPz/AwABAAMAAAAFAP7/AwACAAIAAAAFAP//AwABAAAAAAAFAAAAAwABAAAAAAAFAAEAAwACAAMAAAAFAAMAAwACAAAAAAAFAAQAAwABAAAAAAAFAAUAAwABAAEAAAAFAAYAAwABAAAAAAAFAAcAAwABAAMAAAAGAPr/AwACAAEAAAAGAP7/AwADAAEAAAAGAAEAAwADAAEAAAAGAAUAAwACAAEAAAAHAPr/AwADAAEAAAAHAAUAAwADAAEAAAAIAPf/AwACAAMAAAAIAP7/AwAAAAAAAAAIAAEAAwAAAAAAAAAIAAgAAwACAAIAAAD3//f/AwADAAMAAAD3//j/AwADAAAAAAD3//n/AwADAAAAAAD4//j/AwADAAAAAAD4//n/AwADAAAAAAD5//j/AwADAAAAAAD5//n/AwADAAAAAAD4//f/AwADAAAAAAD5//f/AwADAAAAAAD6//f/AwADAAAAAAD7//f/AwADAAAAAAD8//f/AwADAAAAAAD9//f/AwADAAAAAAD7//j/AwADAAAAAAD7//n/AwADAAAAAAD8//j/AwADAAAAAAD8//n/AwADAAAAAAD9//j/AwADAAAAAAD9//n/AwADAAAAAAD+//j/AwADAAAAAAD///j/AwADAAAAAAAAAPj/AwADAAAAAAABAPj/AwADAAAAAAD///f/AwADAAAAAAAAAPf/AwADAAAAAAD///n/AwADAAAAAAAAAPn/AwADAAAAAAACAPf/AwADAAAAAAACAPj/AwADAAAAAAACAPn/AwADAAAAAAADAPf/AwADAAAAAAADAPj/AwADAAAAAAADAPn/AwADAAAAAAAEAPf/AwADAAAAAAAEAPj/AwADAAAAAAAEAPn/AwADAAAAAAAFAPf/AwADAAAAAAAGAPf/AwADAAAAAAAHAPf/AwADAAAAAAAGAPj/AwADAAAAAAAGAPn/AwADAAAAAAAHAPj/AwADAAAAAAAHAPn/AwADAAAAAAAIAPj/AwADAAAAAAAIAPn/AwADAAAAAAAIAPr/AwADAAAAAAAIAPv/AwADAAAAAAAIAPz/AwADAAAAAAAIAP3/AwADAAAAAAAEAP3/AwADAAAAAAAFAP3/AwADAAAAAAAGAP3/AwADAAAAAAAHAP3/AwADAAAAAAAGAPv/AwADAAAAAAAGAPz/AwADAAAAAAAHAPv/AwADAAAAAAAHAPz/AwADAAAAAAAHAP7/AwADAAAAAAAHAP//AwADAAAAAAAHAAAAAwADAAAAAAAHAAEAAwADAAAAAAAHAAIAAwADAAAAAAAHAAMAAwADAAAAAAAHAAQAAwADAAAAAAAGAP//AwADAAAAAAAGAAAAAwADAAAAAAAIAP//AwADAAAAAAAIAAAAAwADAAAAAAAIAAIAAwADAAAAAAAIAAMAAwADAAAAAAAIAAQAAwADAAAAAAAIAAUAAwADAAAAAAAIAAYAAwADAAAAAAAIAAcAAwADAAAAAAAGAAYAAwADAAAAAAAGAAcAAwADAAAAAAAGAAgAAwADAAAAAAAHAAYAAwADAAAAAAAHAAcAAwADAAAAAAAHAAgAAwADAAAAAAADAAgAAwADAAAAAAAEAAgAAwADAAAAAAAFAAgAAwADAAAAAAD+/wcAAwADAAAAAAD//wcAAwADAAAAAAAAAAcAAwADAAAAAAABAAcAAwADAAAAAAACAAcAAwADAAAAAAADAAcAAwADAAAAAAAEAAcAAwADAAAAAAACAAYAAwADAAAAAAADAAYAAwADAAAAAAAEAAYAAwADAAAAAAACAAQAAwADAAAAAAACAAUAAwADAAAAAAADAAMAAwADAAAAAAADAAQAAwADAAAAAAAEAAMAAwADAAAAAAAEAAQAAwADAAAAAAAEAAIAAwADAAAAAAADAP7/AwADAAAAAAADAP//AwADAAAAAAADAAAAAwADAAAAAAADAAEAAwADAAAAAAAEAP7/AwADAAAAAAAEAP//AwADAAAAAAAEAAAAAwADAAAAAAAEAAEAAwADAAAAAAADAPv/AwADAAAAAAADAPz/AwADAAAAAAAEAPv/AwADAAAAAAAEAPz/AwADAAAAAAACAPr/AwADAAAAAAD7//v/AwADAAAAAAD8//v/AwADAAAAAAD9//v/AwADAAAAAAD+//v/AwADAAAAAAD///v/AwADAAAAAAAAAPv/AwADAAAAAAABAPv/AwADAAAAAAACAPv/AwADAAAAAAD9//r/AwADAAAAAAD+//z/AwADAAAAAAD///z/AwADAAAAAAAAAPz/AwADAAAAAAABAPz/AwADAAAAAAAAAP3/AwADAAAAAAD+//7/AwADAAAAAAD+////AwADAAAAAAD+/wAAAwADAAAAAAD+/wEAAwADAAAAAAD///7/AwADAAAAAAD/////AwADAAAAAAD//wAAAwADAAAAAAD//wEAAwADAAAAAAAAAP7/AwADAAAAAAAAAP//AwADAAAAAAAAAAAAAwADAAAAAAAAAAEAAwADAAAAAAABAP7/AwADAAAAAAABAP//AwADAAAAAAABAAAAAwADAAAAAAABAAEAAwADAAAAAAACAAAAAwADAAAAAAAFAAIAAwADAAAAAAAGAAIAAwADAAAAAAAGAAMAAwADAAAAAAAGAAQAAwADAAAAAAD+/wMAAwADAAAAAAD+/wQAAwADAAAAAAD//wMAAwADAAAAAAD//wQAAwADAAAAAAAAAAMAAwADAAAAAAAAAAQAAwADAAAAAAABAAMAAwADAAAAAAABAAQAAwADAAAAAAD//wIAAwADAAAAAAD//wYAAwADAAAAAAAAAAYAAwADAAAAAAACAAgAAwADAAAAAAAAAAgAAwADAAAAAAD//wgAAwADAAAAAAD4/wgAAwADAAAAAAD5/wgAAwADAAAAAAD6/wgAAwADAAAAAAD7/wgAAwADAAAAAAD8/wgAAwADAAAAAAD9/wgAAwADAAAAAAD7/wYAAwADAAAAAAD7/wcAAwADAAAAAAD8/wYAAwADAAAAAAD8/wcAAwADAAAAAAD9/wYAAwADAAAAAAD9/wcAAwADAAAAAAD9/wUAAwADAAAAAAD9/wQAAwADAAAAAAD7/wMAAwADAAAAAAD7/wQAAwADAAAAAAD8/wMAAwADAAAAAAD8/wQAAwADAAAAAAD7/wIAAwADAAAAAAD7//7/AwADAAAAAAD7////AwADAAAAAAD7/wAAAwADAAAAAAD7/wEAAwADAAAAAAD8//7/AwADAAAAAAD8////AwADAAAAAAD8/wAAAwADAAAAAAD8/wEAAwADAAAAAAD9////AwADAAAAAAD7//3/AwADAAAAAAD7//z/AwADAAAAAAD8//z/AwADAAAAAAD6//3/AwADAAAAAAD3//r/AwADAAAAAAD3//v/AwADAAAAAAD3//z/AwADAAAAAAD3//3/AwADAAAAAAD4//v/AwADAAAAAAD4//z/AwADAAAAAAD4//3/AwADAAAAAAD5//v/AwADAAAAAAD5//z/AwADAAAAAAD5//3/AwADAAAAAAD4//7/AwADAAAAAAD3////AwADAAAAAAD3/wAAAwADAAAAAAD4////AwADAAAAAAD4/wAAAwADAAAAAAD5////AwADAAAAAAD5/wAAAwADAAAAAAD4/wEAAwADAAAAAAD3/wIAAwADAAAAAAD4/wIAAwADAAAAAAD5/wIAAwADAAAAAAD6/wIAAwADAAAAAAD3/wYAAwADAAAAAAD3/wcAAwADAAAAAAD4/wYAAwADAAAAAAD4/wcAAwADAAAAAAD5/wYAAwADAAAAAAD5/wcAAwADAAAAAAD3/wUAAwADAAAAAAD3/wMAAwADAAAAAAD3/wQAAwADAAAAAAD4/wMAAwADAAAAAAD4/wQAAwADAAAAAAD5/wMAAwADAAAAAAD5/wQAAwADAAAAAAA=")
tile_set = SubResource("TileSet_68let")

[node name="Player" parent="." instance=ExtResource("3_l3v54")]

[node name="HUD" parent="Player" instance=ExtResource("5_ghvq8")]

[node name="Pause" parent="." instance=ExtResource("4_3e1m6")]
process_mode = 2
visible = false

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="dashAvailable" from="Player" to="Player/HUD" method="_on_player_dash_available"]
[connection signal="dashUsed" from="Player" to="Player/HUD" method="_on_player_dash_used"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="tookDamage" from="Player" to="Player/HUD" method="_on_player_took_damage"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="Player/HUD" method="_on_score_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
